--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -10,10 +10,10 @@
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
   grid-template-rows: 1fr;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   font-family: "Orbitron", sans-serif;
   font-size: 1.5rem;
 }
@@ -126,24 +126,21 @@ legend {
 .sidebar {
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
   padding-top: 10%;
+  padding-left: 20%;
   gap: 20px;
   grid-column: 1 / 2;
   height: 100%;
 }
 
 .sidebar h1 {
-  position: absolute;
-  left: 50px;
   font-size: 3rem;
   color: rgb(255, 255, 255);
 }
 
 .start {
-  position: relative;
-  top: 80px;
-  left: 50px;
   width: 100px;
   height: 40px;
   border: none;
@@ -161,8 +158,8 @@ legend {
 }
 
 .dashboard {
-  position: relative;
-  bottom: 30%;
+  grid-row: 1 / 2;
+  grid-column: 1 / 4;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -173,9 +170,11 @@ legend {
 }
 
 .game-board {
+  display: grid;
+  grid-template-columns: 2fr 2fr 1fr;
+  grid-template-rows: 1fr 5fr;
   grid-column: 2 / 3;
   grid-row: 1 / 2;
-  display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
@@ -184,16 +183,20 @@ legend {
 }
 
 .grid-one {
-  position: absolute;
-  top: 25%;
-  right: 50%;
+  /* position: absolute; */
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+  /* top: 25%;
+  right: 50%; */
   z-index: 1;
 }
 
 .grid-two {
-  position: absolute;
-  top: 25%;
-  left: 50%;
+  /* position: absolute; */
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  /* top: 25%;
+  left: 50%; */
   z-index: 0;
 }
 
@@ -241,8 +244,7 @@ legend {
 }
 
 .my-ships {
-  position: absolute;
-  left: 1200px;
+  grid-column: 3 / 4;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
