--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -13,7 +13,7 @@
   width: 100vw;
   height: 100vh;
   align-items: center;
-  justify-content: center;
+  justify-items: center;
   font-family: "Orbitron", sans-serif;
   font-size: 1.5rem;
 }
@@ -158,28 +158,22 @@ legend {
 }
 
 .dashboard {
+  transform: translateY(300%);
   grid-row: 1 / 2;
   grid-column: 1 / 4;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   color: rgb(255, 255, 255);
-  width: 90%;
-  height: 50px;
-  font-size: 30px;
 }
 
 .game-board {
   display: grid;
-  grid-template-columns: 2fr 2fr 1fr;
+  grid-template-columns: 2fr 2fr;
   grid-template-rows: 1fr 5fr;
   grid-column: 2 / 3;
   grid-row: 1 / 2;
   align-items: center;
-  justify-content: center;
+  justify-items: center;
   width: 100%;
   height: 100%;
-  gap: 10px;
 }
 
 .grid-one {
@@ -192,11 +186,8 @@ legend {
 }
 
 .grid-two {
-  /* position: absolute; */
   grid-column: 2 / 3;
   grid-row: 2 / 3;
-  /* top: 25%;
-  left: 50%; */
   z-index: 0;
 }
 
@@ -206,10 +197,9 @@ legend {
   grid-template-columns: repeat(10, 1fr);
   height: 300px;
   width: 300px;
-  border: 2px solid black;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-  background: rgba(0, 0, 0, 0.344); /* полупрозрачный фон */
-  backdrop-filter: blur(10px); /* блюр фона */
+  box-shadow: 0 0 15px rgba(0, 0, 0, 1);
+  background: rgba(0, 0, 0, 0.344);
+  backdrop-filter: blur(10px);
 
   visibility: hidden;
   opacity: 0;
@@ -222,25 +212,15 @@ legend {
 
 .cell {
   cursor: pointer;
-  height: 100%;
-  width: 100%;
-  border: 2px solid rgb(0, 0, 0);
+  border: 1px solid rgb(0, 0, 0);
   transition: all 0.3s ease-out;
 }
 
 .cell:hover,
 .opponent-cell:hover {
-  transform: scale(102%);
-  background-color: rgba(255, 255, 255, 0.524);
+  transform: scale(103%);
+  background-color: rgba(255, 255, 255, 0.66);
   box-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
-}
-
-.hidden {
-  display: none;
-}
-
-.show {
-  display: flex;
 }
 
 .my-ships {
@@ -260,6 +240,9 @@ legend {
   cursor: pointer;
 }
 
+.ship:focus {
+  background-color: #900;
+}
 #battleship {
   border: 3px solid rgb(0, 0, 0);
   height: 50px;
