--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -18,10 +18,6 @@
   font-size: 1.5rem;
 }
 
-.orientation {
-  background-color: rgb(147, 147, 204);
-}
-
 .menu {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -140,11 +136,9 @@ legend {
   color: rgb(255, 255, 255);
 }
 
-.restart {
-  cursor: pointer;
-}
-
-.start {
+.start,
+.restart,
+.orientation {
   width: 100px;
   height: 40px;
   border: none;
@@ -156,7 +150,13 @@ legend {
   transition: all 0.2s ease-out;
 }
 
-.start:hover {
+.restart {
+  visibility: hidden;
+}
+
+.start:hover,
+.restart:hover,
+.orientation:hover {
   background-color: rgb(0, 204, 255);
   transform: scale(1.1);
 }
@@ -166,6 +166,7 @@ legend {
   grid-row: 1 / 2;
   grid-column: 1 / 4;
   color: rgb(255, 255, 255);
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
 
 .game-board {
@@ -248,6 +249,8 @@ legend {
   background-color: #900;
 }
 #battleship {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   border: 3px solid rgb(0, 0, 0);
   height: 50px;
   width: 180px;
