--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -238,55 +238,60 @@ legend {
 }
 
 .ship:hover {
-  background-color: rgb(247, 247, 247);
+  background-color: rgb(0, 204, 255);
+  transform: scale(103%);
   cursor: pointer;
 }
 
 .ship:focus {
-  background-color: #900;
+  background-color: rgb(0, 204, 255);
+  transform: scale(103%);
 }
+
 #battleship {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  border: 3px solid rgb(0, 0, 0);
+  border: 2px solid rgb(0, 0, 0);
   height: 50px;
   width: 180px;
 }
 
 #cruiser-one {
-  border: 3px solid rgb(0, 0, 0);
+  border: 2px solid rgb(0, 0, 0);
   height: 50px;
   width: 140px;
 }
 
 #cruiser-two {
-  border: 3px solid rgb(0, 0, 0);
+  border: 2px solid rgb(0, 0, 0);
   height: 50px;
   width: 140px;
 }
 
 #destroyer {
-  border: 3px solid rgb(0, 0, 0);
+  border: 2px solid rgb(0, 0, 0);
   height: 50px;
   width: 110px;
 }
 
 #boat {
-  border: 3px solid rgb(0, 0, 0);
+  border: 2px solid rgb(0, 0, 0);
   height: 50px;
   width: 80px;
 }
 
 .miss {
-  background-color: rgb(255, 0, 0);
+  background-image: url("/src/assets/images/dot.png");
+  background-size: cover;
 }
 
 .hit {
-  background-color: black;
+  background-image: url("/src/assets/images/pngegg.png");
+  background-size: contain;
 }
 
 .ship-cell {
-  background-color: blueviolet;
+  background-color: rgb(0, 0, 0);
 }
 
 .error {
